...
                        : null,
                  );
                  screenManager.updateWidgetPlacement(updated);
                  Navigator.pop(ctx);
                },
                child: const Text(
                  'Apply',
                  style: TextStyle(
                    color: Colors.white,
                    fontWeight: FontWeight.bold,
                  ),
                ),
              ),
...
